# src/models/mod.rs
@@ -1,6 +1,8 @@
 pub mod user;
+pub mod user_info;
 
 // exports
 pub use user::NewUserPayload;
 pub use user::UpdateUserPayload;
 pub use user::User;
+pub use user_info::UserInfo;
