# src/response/mod.rs
@@ -1,8 +1,10 @@
 pub mod change_avatar_response;
 pub mod change_username_response;
+pub mod user_detail_response;
 pub mod user_login_response;
 
 // export
 pub use change_avatar_response::ChangeAvatarResponse;
 pub use change_username_response::ChangeUsernameResponse;
+pub use user_detail_response::UserDetailResponse;
 pub use user_login_response::UserLoginResponse;
