# src/response/user_detail_response.rs
@@ -1,0 +1,13 @@
+use crate::models::{User, UserInfo};
+use serde::Serialize;
+use utoipa::ToSchema;
+
+#[derive(Debug, Serialize, ToSchema)]
+pub struct UserDetailResponse {
+  #[serde(flatten)]
+  pub user: User,
+  #[schema(
+    example = "[{ \"info_key\": \"facebook\", \"info_value\": \"https://facebook.com/zinkyaw\", \"info_type\": \"contact\" }]"
+  )]
+  pub infos: Vec<UserInfo>,
+}
